<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".XamarinActivity"
    tools:showIn="@layout/activity_xamarin">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/xamarin_intro" />

        <!--Architecture-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textStyle="bold"
            android:text="Architecture" />
        <ImageView
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/xamarin_architecture" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/xamarin_architecture" />

        <!--Xamarin.Android-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textStyle="bold"
            android:text="Xamarin.Android" />
        <ImageView
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/xamarin_android" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/xamarin_android" />

        <!--Xamarin.iOS-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textStyle="bold"
            android:text="Xamarin.iOS" />
        <ImageView
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/xamarin_ios" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/xamarin_ios" />

        <!--Xamarin.Essentials-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textStyle="bold"
            android:text="Xamarin.Essentials" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/xamarin_essentials" />

        <!--Xamarin.Forms-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textStyle="bold"
            android:text="Xamarin.Forms" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:text="@string/xamarin_forms" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>