<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".IonicActivity"
    tools:showIn="@layout/activity_ionic">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ionic_platforms" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/ionic_intro" />

        <!--Cross Platform-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textStyle="bold"
            android:text="Cross Platform" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/ionic_crossplatform" />

        <!--Cordova-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textStyle="bold"
            android:text="Cordova" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/ionic_cordova" />

        <!--Angular-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textStyle="bold"
            android:text="Angular" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/ionic_angular" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>