<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".KotlinActivity"
    tools:showIn="@layout/activity_kotlin">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/kotlin_welcome" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/kotlin_intro" />

        <!--Platforms-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textStyle="bold"
            android:text="Plateformes" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/kotlin_platforms" />

        <!--Interoperability-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textStyle="bold"
            android:text="Interopérabilité" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/kotlin_interoperability" />

        <!--Sharing Code-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textStyle="bold"
            android:text="Code Partagé" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/kotlin_sharing" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>