<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize">

    <TextView
        android:id="@+id/app_name"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/little_margin"
        android:layout_marginTop="@dimen/home_topMargin"
        android:layout_marginRight="@dimen/little_margin"
        android:textSize="@dimen/font_maxSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="Roboto"/>
    <TextView
        android:id="@+id/app_name_two"
        android:text="@string/app_name_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/little_margin"
        android:layout_marginEnd="@dimen/little_margin"
        android:gravity="end"
        android:textSize="@dimen/font_maxSize"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/developer_one"
        android:text="@string/developer_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/little_margin"
        android:layout_marginTop="@dimen/eighteen_margin"
        android:layout_marginRight="@dimen/little_margin"
        android:textSize="@dimen/font_normalSize"
        app:layout_constraintTop_toBottomOf="@id/app_name_two"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/developer_two"
        android:text="@string/developer_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/little_margin"
        android:layout_marginTop="@dimen/little_margin"
        android:layout_marginRight="@dimen/little_margin"
        android:textSize="@dimen/font_normalSize"
        app:layout_constraintTop_toBottomOf="@id/developer_one"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageView
        android:id="@+id/flag_en"
        android:src="@mipmap/icon_fr"
        android:layout_width="@dimen/icon_sizeRound"
        android:layout_height="@dimen/home_topMargin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/language"
        android:layout_marginRight="@dimen/margin_five"
        />
    <ImageView
        android:id="@+id/flag_fr"
        android:src="@mipmap/icon_en"
        android:layout_width="@dimen/icon_sizeRound"
        android:layout_height="@dimen/home_topMargin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/language"
        />
    <Switch
        android:id="@+id/language"
        android:layout_width="@dimen/width_fifty"
        android:layout_height="@dimen/width_twentyFive"
        android:layout_marginRight="@dimen/width_sixty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end" />

    <ProgressBar
        android:id="@+id/progression_chart"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="@dimen/width_eighty"
        android:layout_height="@dimen/text_margin"
        android:layout_marginTop="@dimen/home_topMargin"
        android:max="100"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@+id/progression_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/developer_two" />

    <TextView
        android:id="@+id/progression_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/little_margin"
        android:layout_marginEnd="@dimen/little_margin"
        android:textSize="@dimen/font_normalSize"
        app:layout_constraintTop_toBottomOf="@id/progression_chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/list_language"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/list_width"
        android:entries="@array/courses_list"
        android:gravity="center"
        android:layout_marginTop="@dimen/eighteen_margin"
        android:background="@color/colorPrimary"/>
    <ListView
        android:id="@+id/list_language_progression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/progression_level"
        android:gravity="center"
        android:layout_marginTop="@dimen/eighteen_margin"
        android:background="@color/colorPrimary"/>
</androidx.constraintlayout.widget.ConstraintLayout>